# Wakeful-BE-Assignment

./: .gitignore  Dockerfile.be-mfa  README.md  docker-compose.yaml
Postman/: Required Endpoints.Local.env.vars.json  Required Endpoints.Prod.env.vars.json  Required Endpoints.postman_collection.json
libs/trench/: pyproject.toml
libs/trench/trench/: exceptions.py  models.py  responses.py  serializers.py  settings.py  utils.py
libs/trench/trench/backends/: application.py  base.py  basic_mail.py  sms_api.py  twilio.py  yubikey.py
libs/trench/trench/command/: authenticate_second_factor.py  authenticate_user.py  create_secret.py  deactivate_mfa_method.py  generate_backup_codes.py  remove_backup_code.py  replace_mfa_method_backup_codes.py  set_primary_mfa_method.py  validate_backup_code.py
libs/trench/trench/urls/: authtoken.py  base.py  jwt.py
libs/trench/trench/views/: authtoken.py  base.py  jwt.py
prueba_tecnica_backend_wakeful/: .env.sample  README.md  manage.py  pyproject.toml  settings.py
prueba_tecnica_backend_wakeful/prueba_tecnica_backend_wakeful/: asgi.py  environment.py  settings.py  urls.py  wsgi.py
prueba_tecnica_backend_wakeful/templates/trench/backends/email/: code.html  code.txt
prueba_tecnica_backend_wakeful/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
prueba_tecnica_backend_wakeful/users/fixtures/: custom_user.json  user_mfa_app_method.json  user_mfa_email_method.json  user_mfa_two_methods_app_primary.json  user_mfa_two_methods_email_primary.json
prueba_tecnica_backend_wakeful/users/migrations/: 0001_initial.py
