[project]
name = "prueba-tecnica-backend-wakeful"
version = "0.1.0"
description = ""
authors = [{ name = "Ivan Andre Scheel", email = "andrescheel@protonmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "django~=4.2",
    "djangorestframework>=3.15.2,<4",
    "python-dotenv>=1.0.0,<2",
    "pydantic>=1.10.7,<2",
    "psycopg2-binary>=2.9.9,<3",
    "gunicorn>=23.0.0",
    "djangorestframework-simplejwt>=5.3.1,<6",
    "django-filter~=23.1",
    "django-cors-headers>=3.14.0,<4",
    "phonenumberslite>=8.13.10,<9",
    "requests>=2.31.0,<3",
    "trench",
    "whitenoise>=6.6.0,<7",
    "pyjwt>=2.4.0,<3",
]

[dependency-groups]
dev = [
    "mypy",
    "black",
    "isort",
    "ruff",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.uv]

[tool.uv.sources]
trench = { path = "../libs/trench" }

[tool.black]
line-length = 88
target-version = ['py311']

[tool.hatch.build.targets.sdist]
include = ["prueba_tecnica_backend_wakeful"]

[tool.hatch.build.targets.wheel]
include = ["prueba_tecnica_backend_wakeful"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
fix = false
fixable = ["E", "F", "I", "COM812"]
show-source = true
